--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="https://drive.google.com/file/d/1_GG762WguMB-54J33UHrASBLBmVGQ9ad/view?usp=sharing" class="logo">Anas</a>
+						<a href="https://drive.google.com/file/d/1nnfh-OSGYi6vjJGzbD67j335imM2aOoB/view?usp=share_link" class="logo">Anas</a>
 					</header>
 
 				<!-- Nav -->
