--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="https://drive.google.com/file/d/1nnfh-OSGYi6vjJGzbD67j335imM2aOoB/view" class="logo">Anas</a>
+						<a href="https://drive.google.com/file/d/18U0Wz_NUnk2HpFq65CQhVH3PlmxAEdzx/view?usp=sharing" class="logo">Anas</a>
 					</header>
 
 				<!-- Nav -->
@@ -54,7 +54,7 @@
 								</header>
 								<a class="image main"><img src="images/illustration.png" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="https://drive.google.com/file/d/1nnfh-OSGYi6vjJGzbD67j335imM2aOoB/view" class="button large">My CV</a></li>
+									<li><a href="https://drive.google.com/file/d/18U0Wz_NUnk2HpFq65CQhVH3PlmxAEdzx/view?usp=sharing" class="button large">My CV</a></li>
 								</ul>
 							</article>
 
